{
    "version": 1,
    "name": "Input",
    "maps": [
        {
            "name": "GamePlay",
            "id": "59fb3871-db03-486a-9592-ecd079c73696",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "5cbb12d8-29e6-4cde-928e-c1e137dcfd28",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseScroll",
                    "type": "Value",
                    "id": "67d03f8d-9f8b-49e0-9949-bad0212ab90a",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "5c61ff1c-c796-49a4-a66c-b04a2cc35007",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Speed",
                    "type": "Button",
                    "id": "2744b389-c14d-4371-9c05-154aa7bf36fc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Mouse Rotate",
                    "type": "PassThrough",
                    "id": "8789c9a2-a23c-4622-ab41-42ea7e72e74d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Camera Rotate BT",
                    "type": "Button",
                    "id": "c099a395-6ecc-41c7-9324-dcb6f00c0758",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "b5c989f6-5b27-4dbd-9f9d-4b1c8cfef60f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d71cbdf2-e7bf-49da-89eb-6799a23c0657",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0477366b-5503-4e70-b524-b45f7b3392f7",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "17feb57b-5f53-4d41-9b86-93f5890d8ac5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8df80154-eb22-4b10-8ac4-191c76d0a4c8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "be95e963-794b-4ef4-ad93-2f368906b178",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseScroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f3605558-c59e-4d86-8d07-e8b666e32c3b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fb911c76-1557-417d-8db7-d44a752a428f",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Speed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b3c8a665-3418-416f-bf96-fb1d889f0b9e",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a3adeae-e3f5-47a1-824c-112741e7e6de",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera Rotate BT",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "9559bcc6-6b4e-441c-901d-d61d50a40d7d",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "1a6a118d-95cb-4f34-ba95-d1075b6c3197",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b69acb22-78a4-402d-bf9d-03584d2ef78a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Building",
            "id": "9e6d846c-5402-405c-85a3-c47f4cfa90c6",
            "actions": [
                {
                    "name": "PlacePoint",
                    "type": "Button",
                    "id": "9712719d-b2fe-468e-b4b8-c98cc9e95754",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Back",
                    "type": "Button",
                    "id": "c166cc3e-aebe-4136-b75a-f3659efc9fb6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotate",
                    "type": "Button",
                    "id": "c3a5e8de-c4c6-432e-8e67-6201fdbd8673",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ForceBuilding",
                    "type": "Button",
                    "id": "95f216d6-51f1-4f04-bace-b4b3548dc51d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hold",
                    "type": "Button",
                    "id": "47834772-f4f4-44ef-91a7-db4912f1679c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5854c7fa-1421-4a10-becb-d41f14aa0f1b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlacePoint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb8e40c1-23f8-49e3-9c1e-f9165b8f0e01",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c003a6a7-0195-40b0-92c5-bdd5e28a3717",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "16754cce-bb93-4fd6-9a0e-2e0eb26c24ae",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForceBuilding",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "329c2e1a-6557-411c-88db-ecd89b0532af",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hold",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}